--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -1073,7 +1073,28 @@
       },
       "scheduleAssignModal": {
         "title": "Назначение класса для {{name}}",
-        "subtitle": "Управление расписанием занятий инструктора"
+        "subtitle": "Управление расписанием занятий инструктора",
+        "availableClasses": "Доступные Классы",
+        "helpText": "Нажмите, чтобы назначить или удалить классы для этого инструктора",
+        "currentlyAssigned": "Текущие Назначения"
+      },
+      "deleteScheduleModal": {
+        "title": "Подтверждение Удаления Слота Расписания",
+        "message": "Вы уверены, что хотите навсегда удалить этот слот расписания?",
+        "slotDetails": "Детали Слота Расписания",
+        "class": "Класс",
+        "instructor": "Инструктор",
+        "date": "Дата",
+        "time": "Время",
+        "enrolledMembers": "Записанные Участники",
+        "warningTitle": "Это действие нельзя отменить, и оно приведет к",
+        "consequence1": "Отмене запланированной сессии",
+        "consequence2": "Удалению записанных участников из этого слота",
+        "actions": {
+          "cancel": "Отмена",
+          "delete": "Удалить Слот"
+        },
+        "errorMessage": "Ошибка при удалении слота расписания. Пожалуйста, попробуйте снова."
       },
       "common": {
         "loading": "Загрузка...",
