--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -749,6 +749,11 @@
           "spartaAccessDenied": "Доступ Запрещен: Только пользователи Sparta могут принудительно удалять классы с зависимостями",
           "safeToDelete": "Безопасно Удалить",
           "noDependencies": "У этого класса нет активных зависимостей, и его можно безопасно удалить.",
+          "classLabel": "Класс",
+          "activeScheduleSlots": "Активные Слоты Расписания",
+          "assignedInstructors": "Назначенные Инструкторы",
+          "currentEnrollment": "Текущая Запись",
+          "members": "участников",
           "actions": {
             "cancel": "Отмена",
             "delete": "Удалить Класс",
@@ -1076,7 +1081,9 @@
         "subtitle": "Управление расписанием занятий инструктора",
         "availableClasses": "Доступные Классы",
         "helpText": "Нажмите, чтобы назначить или удалить классы для этого инструктора",
-        "currentlyAssigned": "Текущие Назначения"
+        "currentlyAssigned": "Текущие Назначения",
+        "maxCapacity": "макс",
+        "weeklySchedule": "Еженедельное Расписание"
       },
       "deleteScheduleModal": {
         "title": "Подтверждение Удаления Слота Расписания",
@@ -1095,6 +1102,10 @@
           "delete": "Удалить Слот"
         },
         "errorMessage": "Ошибка при удалении слота расписания. Пожалуйста, попробуйте снова."
+      },
+      "notifications": {
+        "instructorAssigned": "Инструктор успешно назначен на \"{{className}}\"",
+        "instructorRemoved": "Инструктор успешно удален из \"{{className}}\""
       },
       "common": {
         "loading": "Загрузка...",
